--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/product
 spring.datasource.username=postgres
-spring.datasource.password=qwert12345
+spring.datasource.password=password
+
+server.port=3000
